fix input border on safari

--- a/app/components/ContactMe/ContactMe.module.css
+++ b/app/components/ContactMe/ContactMe.module.css
@@ -56,6 +56,7 @@
   margin-bottom: 24px;
   border: none;
   border-bottom: 2px var(--secondary) solid;
+  border-radius: 0;
   color: var(--foreground);
   background-color: transparent;
   font-size: 16px;
